tests/__snapshots__/validation-plugins-wrong-option-value-type-stderr.snap.txt
Error: Option 'plugins' requires a value of type list.

  1 | {
  2 |   "plugins": "./tstyche-plugin.js",
    |              ~~~~~~~~~~~~~~~~~~~~~
  3 |   "testFileMatch": [
  4 |     "examples/*.test.*"
  5 |   ]

      at ./tstyche.config.json:2:14

